이미지 반응형으로, 연혁 수정

--- a/index.html
+++ b/index.html
@@ -179,21 +179,21 @@
               						<div class="service">
               						<h3><i class="fa fa-paper-plane"></i> 드론 기술</h3>
                           <p>드론 기술을 활용하여 각종 활동에 도움이 되는 서비스를 개발합니다</p>
-                          <p><img src="./images/cat_drone.png" width="280px"></p>
+                          <p><img src="./images/cat_drone.png" class="imgstyle"></p>
               						</div>
               					</div>
               					<div class="col-md-4 col-sm-4 service-wrap">
               						<div class="service animate-change">
               						<h3><i class="fa fa-magic"></i> 감성소통 기술</h3>
                           <p>아주 감성적이며 재미있는 소통 기술을 연구하고 개발합니다</p>
-                          <p><img src="./images/cat_emotion.png" width="280px"></p>
+                          <p><img src="./images/cat_emotion.png" class="imgstyle"></p>
               						</div>
               					</div>
                         <div class="col-md-4 col-sm-4 service-wrap">
               						<div class="service">
               						<h3><i class="fa fa-calculator"></i> 빅데이터/인공지능 기술</h3>
                           <p>데이터를 이해하고, 가치를 발굴하고, 인사이트를 얻고, 인공지능까지 디자인 합니다</p>
-                          <p><img src="./images/cat_data.png" width="280px"></p>
+                          <p><img src="./images/cat_data.png" class="imgstyle"></p>
               						</div>
               					</div>
                     </div>
@@ -276,14 +276,14 @@
             </section>
 
 
-
-
             <section class="section-four" id="section-four">
             	<div class="container">
                 <header role="title-page" class="text-center">
                     <h4><font color=#ffffff>연혁</font></h4>
                       <font color=#ffffff>
-                        <p>2018-12 기술보증기금 자금유치</p>
+                        <p>2019-02 체리픽웍스(주)와 제휴협약, 청년농부 김현승님과 제휴협약</p>
+                        <p>2019-01 강원도립대와 제휴협약</p>
+                        <p>2018-12 기술보증기금 자금유치, 청년농부 이호승님과 제휴협약</p>
                         <p>2018-09 법인설립</p>
                         <p>2018-08 K-Startup 기술혁신형 창업기업 지원사업 선정</p>
                       </font>
@@ -376,7 +376,7 @@
                 		    </font>
 
                 			       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3165.5249044228185!2d127.0271385!3d37.4955363!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca1509dfe20ab%3A0xe52bb39be1ff4ba5!2z7Yyo7Iqk7Yq47YyM7J2067iMIOqwleuCqCAy7Zi47KCQ!5e0!3m2!1sko!2skr!4v1550571205107" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
-                        
+
                     </head>
       	      </div>
 
