좋아요 테마 변경

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
                                             <li><a href="https://www.facebook.com/APLYPLATFORM"><i class="fab fa-facebook-f"></i></a></li>
-                                            <li><div class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="200" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div></i>
+                                            <li><div colorscheme="dark" class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="200" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div></i>
                                         </ul>
                                     </div>
                                 </aside>
