약간의 레이아웃 오류들 수정

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                             </li>
                             <li><a href="#section-team"><span class="menu-item-span">팀</span></a>
                             </li>
-                            <li><a href="https://blog.aply.biz" target="new"><span class="menu-item-span">블로그</span></a>
-                            </li>
                             <li><a href="#section-location"><span class="menu-item-span">찾아오시는길</span></a>
+                            </li>
+                            <li><a href="https://blog.aply.biz" target="new"><span class="menu-item-span">블로그</span></a>
                             </li>
 
                         </ul>
@@ -107,7 +107,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 m-auto text-center">
-                            <h3>APLY는 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다</h3>
+                            <h3>APLY는 보다 진보된 기술로<br>재미있고 멋진 서비스를 연구하고 개발합니다</h3>
                             <p class="lead">드론, 감성소통, 빅데이터, 인공지능 기술을 기반으로 많은 분들에게 도움이 되는 재미있는 서비스를 만듭니다</p>
                         </div>
                     </div>
@@ -478,13 +478,15 @@
                                     <div class="textwidget">
                                         <p>보다 재미있게 일하기 위한 진보된 플랫폼 어플라이와 만나보세요.</p>
                                         <p>
-                                            Location: 서울특별시 강남구 강남대로 364, 패스트파이브(역삼동, 미왕빌딩) , 17층 / 06241<br>
+                                            서울특별시 강남구 강남대로 364, 패스트파이브(역삼동, 미왕빌딩) , 17층 / 06241<br>
                                             E-mail: contactus@aply.biz<br>
                                             Phone: 02-6956-0801<br>
+                                            Fax: 02-6954-1019<br>
                                         </p>
                                         <ul class="social-icons">
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
                                             <li><a href="https://www.facebook.com/APLYPLATFORM"><i class="fab fa-facebook-f"></i></a></li>
+					    <li></li>
                                             <li><div colorscheme="dark" class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="200" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div></i>
                                         </ul>
                                     </div>
@@ -518,7 +520,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="copyright">
-                                    <p>© 2019 APLY Inc</p>
+                                    <p>© 2019 APLY Inc.</p>
                                 </div>
                             </div>
                         </div>
