--- a/index.html
+++ b/index.html
@@ -190,7 +190,10 @@
                                       <a href="https://www.facebook.com/두런두런-334464897347449" target="new"><i class="ti-facebook"></i></a>&nbsp;&nbsp;
                                       <a href="https://www.instagram.com/drdr_aply/" target="new"><i class="ti-instagram"></i></a>
                                     </p>
-                                    <p><a href="#">드로미</a> : 드론, 센서박스 등을 활용하여 논/밭의 작황/병충해 상태를 모니터링 하는 서비스</p>
+                                    <p><a href="https://dromi.aply.biz">드로미</a> : 드론, 센서박스 등을 활용하여 논/밭의 작황/병충해 상태를 모니터링 하는 서비스</p>
+                                    <p>
+                                      <a href="https://dromi.aply.biz" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
+                                    </p>
                                 </div>
                             </div>
                         </div>
