--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     </div>
                     <div class="row row-post-masonry">
                         <div class="col-md-6 m-auto text-center">
-                                        <div class="fb-page" data-href="https://www.facebook.com/aplyplatform" data-tabs="timeline" data-height="580" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/aplyplatform" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/aplyplatform">APLY</a></blockquote></div>
+                                        <div class="fb-page" data-href="https://www.facebook.com/aplyplatform" data-tabs="timeline" data-height="580" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/aplyplatform" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/aplyplatform">APLY</a></blockquote></div><br><br>
                         </div>
                         <div class="col-md-6 m-auto text-center">
                                         <iframe src="https://snapwidget.com/embed/653802" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:330px; height:580px"></iframe>
