파트너 목록 정렬 방법 수정

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <section class="module">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-4 col-md-6">
                             <div class="icon-box">
                                 <div class="icon-box-icon"><span class="ti-layout"></span></div>
                                 <div class="icon-box-title">
@@ -197,7 +197,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-4 col-md-6">
                             <div class="icon-box">
                                 <div class="icon-box-icon"><span class="ti-comments-smiley"></span></div>
                                 <div class="icon-box-title">
@@ -218,40 +218,35 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-lg-4 col-md-6">
                             <div class="icon-box">
                                 <div class="icon-box-icon"><span class="ti-user"></span></div>
                                 <div class="icon-box-title">
                                     <h6>APLY의 파트너</h6>
                                 </div>
-                                <div class="icon-box-content">
-                                  <p><a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
-                                  <p><a href="https://blog.naver.com/essong1225" target=new>티아이피 특허법률 사무소</a></p>
+                                <div class="icon-box-content row">
 
-                                  <p><a href="http://appsosystem.com" target=new>(주)앱소</a></p>
+                                  <div class="col-md-6 m-auto">
+                                    <p><a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
+                                    <p><a href="https://blog.naver.com/essong1225" target=new>티아이피 특허법률 사무소</a></p>
 
-                                  <p><a href="http://koworc.kr" target=new>한국창의여성연구협동조합</a></p>
+                                    <p><a href="http://appsosystem.com" target=new>(주)앱소</a></p>
 
-                                  <p><a href="https://www.mss.go.kr" target=new>중소벤처기업부</a></p>
+                                    <p><a href="http://koworc.kr" target=new>한국창의여성연구협동조합</a></p>
 
-                                  <p><a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
+                                    <p><a href="https://www.mss.go.kr" target=new>중소벤처기업부</a></p>
 
-                                  <p><a href="http://koworc.kr" target=new>강원도립대학교</a></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="icon-box">
-                                <div class="icon-box-icon"><span class="ti-write" style="color:#fff"></span></div>
-                                <div class="icon-box-title">
-                                    <h6 style="color:#fff">__</h6>
-                                </div>
-                                <div class="icon-box-content">
-                                  <p><a href="https://m.blog.naver.com/PostList.nhn?blogId=107whos" target=new>청년농부 이호승 (홍천)</a></p>
+                                    <p><a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
 
-                                  <p><a href="https://www.instagram.com/fl_ember" target=new>청년농부 김현승 (파주)</a></p>
+                                    <p><a href="http://koworc.kr" target=new>강원도립대학교</a></p>
+                                  </div>
+                                  <div class="col-md-6">
+                                    <p><a href="https://m.blog.naver.com/PostList.nhn?blogId=107whos" target=new>청년농부 이호승 (홍천)</a></p>
 
-                                  <p><a href="http://cpworks.co.kr" target=new>체리픽웍스</a></p>
+                                    <p><a href="https://www.instagram.com/fl_ember" target=new>청년농부 김현승 (파주)</a></p>
+
+                                    <p><a href="http://cpworks.co.kr" target=new>체리픽웍스</a></p>
+                                  </div>
                                 </div>
                             </div>
                         </div>
