포트폴리오 수정

--- a/index.html
+++ b/index.html
@@ -485,9 +485,9 @@
                                         <h6>Portfolio</h6>
                                     </div>
                                     <ul>
-                                        <li><a href="https://top.dkdk.io"><img src="assets/images/widgets/1.jpg" alt=""></a></li>
-                                        <li><a href="https://drdr.io"><img src="assets/images/widgets/2.jpg" alt=""></a></li>
-                                        <li><a href="#"><img src="assets/images/widgets/3.jpg" alt=""></a></li>
+                                        <li><a href="https://top.dkdk.io" target=_new><img src="assets/images/widgets/1.jpg" alt="두근두근"></a></li>
+                                        <li><a href="https://drdr.io" target=_new><img src="assets/images/widgets/2.jpg" alt="두런두런"></a></li>
+                                        <li><a href="https://dromi.aply.biz" target=_new><img src="assets/images/widgets/3.jpg" alt="드로미"></a></li>
 
                                     </ul>
                                 </aside>
