--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>Advanced Platform <br> to Fly</strong></h1>
+                            <h2 class="m-b-20"><strong>Advanced Platform <br> to Fly</strong></h2>
                             <!-- <p class="m-b-40">APLY는 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다</p> -->
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 m-auto text-center">
-                            <h3>APLY는 보다 진보된 기술로<br>재미있고 멋진 서비스를 연구하고 개발합니다</h3>
+                            <h4>APLY는 보다 진보된 기술로<br>재미있고 멋진 서비스를 연구하고 개발합니다</h4>
                             <p class="lead">드론, 감성소통, 빅데이터, 인공지능 기술을 기반으로 많은 분들에게 도움이 되는 재미있는 서비스를 만듭니다</p>
                         </div>
                     </div>
@@ -387,7 +387,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 m-auto text-center">
-                            <h1>APLY 팀을 만나보세요</h1>
+                            <h3>APLY 팀을 만나보세요</h3>
                             <p class="lead">보다 즐겁고, 재미있게 일하는 진보된 플랫폼 -<br>APLY 팀원들의 이야기를 페이스북과 인스타그램에서 만나보세요</p>
                             <a href="https://www.facebook.com/APLYPLATFORM"><i class="ti-facebook" aria-hidden="true"></i></a>&nbsp;&nbsp;
                             <a href="https://www.instagram.com/aplyplatform"><i class="ti-instagram" aria-hidden="true"></i></a>
@@ -417,17 +417,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-
-                          <font color="#ffffff">
-                      		    <h4 style="text-align:center">찾아오시는 길</h4>
-                      		    <h5><i class="ti-location-arrow" aria-hidden="true"></i> 서울특별시 강남구 강남대로 364, 패스트파이브(역삼동, 미왕빌딩) , 17층 / 06241<br>
-                      		    <i class="ti-headphone" aria-hidden="true"></i> 02-6956-0801 /
-                      		    <i class="ti-printer" aria-hidden="true"></i> 02-6954-1019<br>
-                      		    <i class="ti-email" aria-hidden="true"></i> contactus@aply.biz</h5>
-                          </font>
-
-                          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3165.5249044228185!2d127.0271385!3d37.4955363!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca1509dfe20ab%3A0xe52bb39be1ff4ba5!2z7Yyo7Iqk7Yq47YyM7J2067iMIOqwleuCqCAy7Zi47KCQ!5e0!3m2!1sko!2skr!4v1550571205107" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+                      		<h5>Location</h5>
+                          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3165.5249044228185!2d127.0271385!3d37.4955363!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca1509dfe20ab%3A0xe52bb39be1ff4ba5!2z7Yyo7Iqk7Yq47YyM7J2067iMIOqwleuCqCAy7Zi47KCQ!5e0!3m2!1sko!2skr!4v1550571205107" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -456,7 +447,7 @@
                                         <h6>About Us</h6>
                                     </div>
                                     <div class="textwidget">
-                                        <p>보다 재미있게 일하기 위한 진보된 플랫폼 어플라이와 만나보세요.</p>
+                                        <p>보다 재미있게 일하기 위한 진보된 플랫폼 - 어플라이와 만나보세요.</p>
                                         <p>
                                             서울특별시 강남구 강남대로 364, 패스트파이브(역삼동, 미왕빌딩) , 17층 / 06241<br>
                                             E-mail: contactus@aply.biz<br>
