파트너에 법무사님 추가

--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
                                     <p><a href="https://www.instagram.com/fl_ember" target=new>청년농부 김현승 (파주)</a></p>
 
                                     <p><a href="http://cpworks.co.kr" target=new>체리픽웍스</a></p>
+
+                                    <p><a href="#">법무사 김청산 사무소</a></p>
                                   </div>
                                 </div>
                             </div>
