마지막 부분 문구 수정

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                                         <h6>About Us</h6>
                                     </div>
                                     <div class="textwidget">
-                                        <p>보다 재미있게 일하기 위한 진보된 플랫폼 - 어플라이와 만나보세요.</p>
+                                        <p>보다 재미있게 일하기 위한 진보된 플랫폼<br>어플라이와 만나보세요.</p>
                                         <p>
                                             서울특별시 강남구 강남대로 364, 패스트파이브(역삼동, 미왕빌딩) , 17층 / 06241<br>
                                             E-mail: contactus@aply.biz<br>
