--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
                                     <p><a href="http://cpworks.co.kr" target=new>체리픽웍스</a></p>
 
-                                    <p><a href="#">법무사 김청산 사무소</a></p>
+                                    <p><a href="https://blog.naver.com/bluemtk">법무사 김청산 사무소</a></p>
                                   </div>
                                 </div>
                             </div>
