--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <!-- Wrapper-->
         <div class="wrapper">
             <!-- Hero-->
-            <section class="module-cover parallax fullscreen text-center" data-background="assets/images/module-2.jpg" data-jarallax-video="https://youtube.com/watch?v=jGqlrCuIizs" data-overlay="0.45">
+            <section class="module-cover parallax fullscreen text-center" data-background="assets/images/module-2.jpg" data-jarallax-video="https://youtube.com/watch?v=sVQM5mD8wOg" data-overlay="0.45">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
