타이틀 변경

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
         <!-- Wrapper-->
         <div class="wrapper">
             <!-- Hero-->
-            <section class="module-cover parallax fullscreen text-center" data-background="assets/images/module-2.jpg" data-jarallax-video="https://youtube.com/watch?v=Z20ukVWanjM" data-overlay="0.45">
+            <section class="module-cover parallax fullscreen text-center" data-background="assets/images/module-2.jpg" data-jarallax-video="https://youtube.com/watch?v=jGqlrCuIizs" data-overlay="0.45">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <!-- <h2 class="m-b-20"><strong>Advanced Platform <br> to Fly</strong></h2> -->
+                            <h2 class="m-b-20"><strong>Advanced Platform <br> to Fly</strong></h2> 
                             <!-- <p class="m-b-40">APLY는 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다</p> -->
                         </div>
                     </div>
