--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <!-- <h2 class="m-b-20"><strong>Advanced Platform <br> to Fly</strong></h2> -->
+                            <h2 class="m-b-20"><strong>Advanced Platform <br> to Fly</strong></h2>
                             <!-- <p class="m-b-40">APLY는 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다</p> -->
                         </div>
                     </div>
