파트너 목록에 여정구님 추가

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
                                     <p><a href="http://cpworks.co.kr" target=new>체리픽웍스</a></p>
 
                                     <p><a href="https://blog.naver.com/bluemtk">법무사 김청산 사무소</a></p>
+                                    <p><a href="#" target=new>청년농부 여정구 (정선)</a></p>
                                   </div>
                                 </div>
                             </div>
