기록에 여정구님과 협약 내용 추가

--- a/index.html
+++ b/index.html
@@ -271,6 +271,15 @@
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
                                 <div class="icon-box-title">
+                                    <h6>2019-04</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>청년농부 여정구님과 제휴협약</p>
+                                </div>
+                            </div>
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
+                                <div class="icon-box-title">
                                     <h6>2019-02</h6>
                                 </div>
                                 <div class="icon-box-content">
