--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
                                             <p>다양한 분야에 특화된 팀원들이 있습니다</p>
                                             <footer class="blockquote-footer">
                                             - 인공지능/빅데이터/드론/해상 통신기술등을 두루 경험한 기술팀<br>
-                                            - 국가인재 관리, 통계분석, 과학기술 정책 연구 경험이 풍부한 기획팀<br>
-                                            - 철학과 이야기가 있는 사용자경험, 디자인을 꾸밀줄 아는 디자인팀<br>
+                                            - 국가인재 관리, 통계분석, 특허, 과학기술 정책 연구 경험이 풍부한 기획팀<br>
+                                            - 철학과 이야기가 있는 사용자경험, 콘텐츠, 디자인을 꾸밀줄 아는 디자인팀<br>
                                             - 정확하게 고객을 찾고 감동시킬 줄 아는 마케팅팀
                                           </footer>
                                         </blockquote>
