메일 링크 추가

--- a/index.html
+++ b/index.html
@@ -459,10 +459,10 @@
                                         <h6>About Us</h6>
                                     </div>
                                     <div class="textwidget">
-                                        <p>보다 재미있게 일하기 위한 진보된 플랫폼<br>어플라이와 만나보세요.</p>
+                                        <p><b>APLY Inc.</b><br>보다 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                         <p>
                                             서울특별시 강남구 강남대로 364, 패스트파이브(역삼동, 미왕빌딩) , 17층 / 06241<br>
-                                            E-mail: contactus@aply.biz<br>
+                                            E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
                                             Phone: 02-6956-0801<br>
                                             Fax: 02-6954-1019<br>
                                         </p>
@@ -470,7 +470,7 @@
                                             <li><a href="https://www.instagram.com/aplyplatform"><i class="fab fa-instagram"></i></a></li>
                                             <li><a href="https://www.facebook.com/APLYPLATFORM"><i class="fab fa-facebook-f"></i></a></li>
 					    <li></li>
-                                            <li><div colorscheme="dark" class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="200" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div></i>
+                                            <li><div colorscheme="dark" class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="220" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div></i>
                                         </ul>
                                     </div>
                                 </aside>
