포트폴리오 수정

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <!-- Alt Services end-->
 
             <!-- Testimonials-->
-            <section class="module parallax" data-background="assets/images/about-1.jpg" data-overlay="0.5" id="section-team">
+            <section class="module parallax" data-background="assets/images/about-1.jpg" data-overlay="0.3" id="section-team">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -433,19 +433,15 @@
                           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3165.5249044228185!2d127.0271385!3d37.4955363!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca1509dfe20ab%3A0xe52bb39be1ff4ba5!2z7Yyo7Iqk7Yq47YyM7J2067iMIOqwleuCqCAy7Zi47KCQ!5e0!3m2!1sko!2skr!4v1550571205107" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
-                </div>
-            </section>
-            <!-- Counters end-->
-
-            <!-- Image-->
-            <section class="module no-gutters p-0">
-                <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-12"><img src="assets/images/module-18.jpg" alt=""></div>
+                        <div class="col-md-12">
+                            <div class="space" data-MY="60px"></div>
+                        </div>
                     </div>
                 </div>
+
             </section>
-            <!-- Image end-->
+            <!-- Counters end-->
 
             <!-- Footer-->
             <footer class="footer">
@@ -456,10 +452,10 @@
                                 <!-- Text widget-->
                                 <aside class="widget widget-text">
                                     <div class="widget-title">
-                                        <h6>About Us</h6>
+                                        <a href="#"><font color=white><p><B>APLY Inc.</B></p></font></a>
                                     </div>
                                     <div class="textwidget">
-                                        <p><b>APLY Inc.</b><br>보다 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
+                                        <p>보다 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                         <p>
                                             서울특별시 강남구 강남대로 364, 패스트파이브(역삼동, 미왕빌딩) , 17층 / 06241<br>
                                             E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
@@ -488,9 +484,9 @@
                                         <h6>Portfolio</h6>
                                     </div>
                                     <ul>
-                                        <li><a href="https://top.dkdk.io" target=_new><img src="assets/images/widgets/1.jpg" alt="두근두근"></a></li>
-                                        <li><a href="https://drdr.io" target=_new><img src="assets/images/widgets/2.jpg" alt="두런두런"></a></li>
-                                        <li><a href="https://dromi.aply.biz" target=_new><img src="assets/images/widgets/3.jpg" alt="드로미"></a></li>
+                                        <li><a href="https://drdr.io" target=_new><img src="assets/images/widgets/2.png" alt="두런두런"></a></li>
+                                        <li><a href="https://dromi.aply.biz" target=_new><img src="assets/images/widgets/3.png" alt="드로미"></a></li>
+                                        <li><a href="https://top.dkdk.io" target=_new><img src="assets/images/widgets/1.png" alt="두근두근"></a></li>
 
                                     </ul>
                                 </aside>
