--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <meta name="author" content="">
 
         <meta property="og:title" content="APLY - Advanced platform to fly"/>
-        <meta property="og:image" content="https://www.aply.biz/images/aply_fb.jpg"/>
+        <meta property="og:image" content="/assets/images/site_title.png"/>
         <meta property="og:url" content="https://www.aply.biz"/>
         <meta property="og:site_name" content="APLY"/>
         <meta property="og:description" content="We will fly high"/>
