--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <meta property="og:title" content="APLY - Advanced platform to fly"/>
+        <meta property="og:title" content="어플라이 | APLY - Advanced platform to fly"/>
         <meta property="og:image" content="/assets/images/site_title.png"/>
         <meta property="og:url" content="https://www.aply.biz"/>
         <meta property="og:site_name" content="APLY"/>
-        <meta property="og:description" content="We will fly high"/>
+        <meta property="og:description" content="재미있게 일하는 진보된 플랫폼"/>
         <title>Advanced Platform to fLY | APLY Inc. | 주식회사 어플라이</title>
         <!-- Favicons-->
         <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
