--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <meta name="author" content="">
 
         <meta property="og:title" content="어플라이 | APLY - Advanced platform to fly"/>
-        <meta property="og:image" content="/assets/images/site_title.png"/>
+        <meta property="og:image" content="https://www.aply.biz/assets/images/site_title.png"/>
         <meta property="og:url" content="https://www.aply.biz"/>
         <meta property="og:site_name" content="APLY"/>
         <meta property="og:description" content="재미있게 일하는 진보된 플랫폼"/>
