드로미 페북 링크 추가

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                                     <p><a href="https://dromi.aply.biz">드로미</a> : 드론, 센서박스 등을 활용하여 논/밭의 작황/병충해 상태를 모니터링 하는 서비스</p>
                                     <p>
                                       <a href="https://dromi.aply.biz" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
+                                      <a href="https://www.facebook.com/드로미-393689674813641" target="new"><i class="ti-facebook"></i></a>
                                     </p>
                                 </div>
                             </div>
