--- a/index.html
+++ b/index.html
@@ -179,10 +179,11 @@
                                     <h6>APLY가 개발중인 앱과 서비스</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p><a href="https://top.dkdk.io" target="new">두근두근</a> : 온라인상의 친구에게 심박패턴을 전달하는 감성앱</p>
+                                    <p><a href="https://top.dkdk.io" target="new">두근두근</a> : 지인 또는 친구에게 심박패턴을 전달하는 감성앱</p>
                                     <p>
                                       <a href="https://top.dkdk.io" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
                                       <a href="https://www.facebook.com/dkdkheart/" target="new"><i class="ti-facebook"></i></a>
+                                      <a href="https://www.instagram.com/dkdk_aply/" target="new"><i class="ti-instagram"></i></a>
                                     </p>
                                     <p><a href="https://drdr.io" target="new">두런두런</a> : 논/밭의 이야기를 담는 감성 브랜딩 서비스</p>
                                     <p>
@@ -190,7 +191,7 @@
                                       <a href="https://www.facebook.com/두런두런-334464897347449" target="new"><i class="ti-facebook"></i></a>&nbsp;&nbsp;
                                       <a href="https://www.instagram.com/drdr_aply/" target="new"><i class="ti-instagram"></i></a>
                                     </p>
-                                    <p><a href="https://dromi.aply.biz">드로미</a> : 드론, 센서박스 등을 활용하여 논/밭의 작황/병충해 상태를 모니터링 하는 서비스</p>
+                                    <p><a href="https://dromi.aply.biz">드로미</a> : 드론, 센서박스등을 활용하여 시설물 및 논/밭의 상태를 모니터링 하는 서비스</p>
                                     <p>
                                       <a href="https://dromi.aply.biz" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
                                       <a href="https://www.facebook.com/드로미-393689674813641" target="new"><i class="ti-facebook"></i></a>
