두근두근 인스타그램 링크 간격 조정

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                     <p><a href="https://top.dkdk.io" target="new">두근두근</a> : 지인 또는 친구에게 심박패턴을 전달하는 감성앱</p>
                                     <p>
                                       <a href="https://top.dkdk.io" target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
-                                      <a href="https://www.facebook.com/dkdkheart/" target="new"><i class="ti-facebook"></i></a>
+                                      <a href="https://www.facebook.com/dkdkheart/" target="new"><i class="ti-facebook"></i></a>&nbsp;&nbsp;
                                       <a href="https://www.instagram.com/dkdk_aply/" target="new"><i class="ti-instagram"></i></a>
                                     </p>
                                     <p><a href="https://drdr.io" target="new">두런두런</a> : 논/밭의 이야기를 담는 감성 브랜딩 서비스</p>
