--- a/index.html
+++ b/index.html
@@ -243,14 +243,17 @@
                                     <p><a href="http://koworc.kr" target=new>강원도립대학교</a></p>
                                   </div>
                                   <div class="col-md-6">
-                                    <p><a href="https://m.blog.naver.com/PostList.nhn?blogId=107whos" target=new>청년농부 이호승 (홍천)</a></p>
+                                    <p><a href="https://drdr.io/이호승" target=new>청년농부 이호승 (홍천)</a></p>
 
-                                    <p><a href="https://www.instagram.com/fl_ember" target=new>청년농부 김현승 (파주)</a></p>
+                                    <p><a href="https://drdr.io/김현승" target=new>청년농부 김현승 (파주)</a></p>
 
                                     <p><a href="http://cpworks.co.kr" target=new>체리픽웍스</a></p>
 
                                     <p><a href="https://blog.naver.com/bluemtk">법무사 김청산 사무소</a></p>
-                                    <p><a href="#" target=new>청년농부 여정구 (정선)</a></p>
+
+                                    <p><a href="https://drdr.io/여정구" target=new>청년농부 여정구 (정선)</a></p>
+
+                                    <p><a href="https://1boon.kakao.com/farmer-story/letterfromfarmer_4" target=new>이슬농원 송광호 (제주)</a></p>
                                   </div>
                                 </div>
                             </div>
@@ -270,6 +273,15 @@
                             <h2>연혁</h2>
                             <p class="lead">좀 더 재미있게, 즐겁게 일하기 위한 진보된 Platform이 걸어온 길</p>
                             <div class="space" data-MY="50px"></div>
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
+                                <div class="icon-box-title">
+                                    <h6>2019-06</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>제주 이슬농원 송광호님과 제휴협약</p>
+                                </div>
+                            </div>
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
                                 <div class="icon-box-title">
