카톨릭 관동대 링크 및 협약 기록 추가

--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
 
                                   <div class="col-md-6 m-auto">
                                     <p><a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
+
                                     <p><a href="https://blog.naver.com/essong1225" target=new>티아이피 특허법률 사무소</a></p>
 
                                     <p><a href="http://appsosystem.com" target=new>(주)앱소</a></p>
@@ -254,6 +255,8 @@
                                     <p><a href="https://drdr.io/여정구" target=new>청년농부 여정구 (정선)</a></p>
 
                                     <p><a href="https://1boon.kakao.com/farmer-story/letterfromfarmer_4" target=new>이슬농원 송광호 (제주)</a></p>
+
+                                    <p><a href="http://www.cku.ac.kr" target=new>카톨릭관동대학교</a></p>
                                   </div>
                                 </div>
                             </div>
@@ -279,7 +282,7 @@
                                     <h6>2019-06</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>제주 이슬농원 송광호님과 제휴협약</p>
+                                    <p>제주 이슬농원 송광호님과 제휴협약, 카톨릭관동대학교와 제휴협약</p>
                                 </div>
                             </div>
                             <div class="icon-box icon-box-left">
