컴퍼니에이 추가

--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@
                                     <p><a href="https://drdr.io/송광호" target=new>이슬농원 송광호 (제주)</a></p>
 
                                     <p><a href="http://www.cku.ac.kr" target=new>카톨릭관동대학교</a></p>
+
+                                    <p><a href="https://companya.modoo.at" target=new>엑셀러레이터 컴퍼니에이</a></p>
                                   </div>
                                 </div>
                             </div>
