컴퍼니에이 추가

--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
                                     <p><a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
 
                                     <p><a href="http://koworc.kr" target=new>강원도립대학교</a></p>
+
+                                    <p><a href="https://drdr.io/이호승" target=new>청년농부 이호승 (홍천)</a></p>
                                   </div>
                                   <div class="col-md-6">
-                                    <p><a href="https://drdr.io/이호승" target=new>청년농부 이호승 (홍천)</a></p>
-
                                     <p><a href="https://drdr.io/김현승" target=new>청년농부 김현승 (파주)</a></p>
 
                                     <p><a href="http://cpworks.co.kr" target=new>체리픽웍스</a></p>
@@ -278,6 +278,15 @@
                             <h2>연혁</h2>
                             <p class="lead">좀 더 재미있게, 즐겁게 일하기 위한 진보된 Platform이 걸어온 길</p>
                             <div class="space" data-MY="50px"></div>
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
+                                <div class="icon-box-title">
+                                    <h6>2019-07</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>과학기술정보통신부/과학특구진흥재단/고려대학교 세종산학협력단/컴퍼니에이 주최 A-Match X A-Yo! 엑셀러레이팅 프로그램 선정</p>
+                                </div>
+                            </div>
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
                                 <div class="icon-box-title">
