LINC+ 이력 줄바꿈

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                     <h6>2019-07</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>과학기술정보통신부/과학특구진흥재단/고려대학교 세종산학협력단/컴퍼니에이 주최 A-Match X A-Yo! 엑셀러레이팅 프로그램 선정, 카톨릭관동대학교 x LINC+사업 협력사 선정</p>
+                                    <p>- 과학기술정보통신부/과학특구진흥재단/고려대학교 세종산학협력단/컴퍼니에이 주최 A-Match X A-Yo! 엑셀러레이팅 프로그램 선정<br>- 카톨릭관동대학교 x LINC+사업 협력사 선정</p>
                                 </div>
                             </div>
                             <div class="icon-box icon-box-left">
