카 톨릭 > 가톨릭으로 수정

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
                                     <p><a href="https://drdr.io/송광호" target=new>이슬농원 송광호 (제주)</a></p>
 
-                                    <p><a href="http://www.cku.ac.kr" target=new>카톨릭관동대학교</a></p>
+                                    <p><a href="http://www.cku.ac.kr" target=new>가톨릭관동대학교</a></p>
 
                                     <p><a href="https://companya.modoo.at" target=new>엑셀러레이터 컴퍼니에이</a></p>
                                   </div>
@@ -284,7 +284,7 @@
                                     <h6>2019-07</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>- 과학기술정보통신부/과학특구진흥재단/고려대학교 세종산학협력단/컴퍼니에이 주최 A-Match X A-Yo! 엑셀러레이팅 프로그램 선정<br>- 카톨릭관동대학교 x LINC+사업 협력사 선정</p>
+                                    <p>과학기술정보통신부/과학특구진흥재단/고려대학교 세종산학협력단/컴퍼니에이 주최 A-Match X A-Yo! 엑셀러레이팅 프로그램 선정,<br>가톨릭관동대학교 x LINC+사업 협력사 선정</p>
                                 </div>
                             </div>
                             <div class="icon-box icon-box-left">
@@ -293,7 +293,7 @@
                                     <h6>2019-06</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>제주 이슬농원 송광호님과 제휴협약, 카톨릭관동대학교와 제휴협약</p>
+                                    <p>제주 이슬농원 송광호님과 제휴협약, 가톨릭관동대학교와 제휴협약</p>
                                 </div>
                             </div>
                             <div class="icon-box icon-box-left">
