--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
                                 <div class="icon-box-content row">
 
                                   <div class="col-md-6 m-auto">
+                                    <p><a href="https://www.facebook.com/StartupbayJeju" target=new>제주 스타트업베이</a></p>
+
+                                    <p><a href="https://ccei.creativekorea.or.kr/jeju" target=new>제주 창조경제혁신센터</a></p>
+
                                     <p><a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
 
                                     <p><a href="https://blog.naver.com/essong1225" target=new>티아이피 특허법률 사무소</a></p>
@@ -278,6 +282,15 @@
                             <h2>연혁</h2>
                             <p class="lead">좀 더 재미있게, 즐겁게 일하기 위한 진보된 Platform이 걸어온 길</p>
                             <div class="space" data-MY="50px"></div>
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
+                                <div class="icon-box-title">
+                                    <h6>2019-09</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>제주 스타트업베이 중장년기술창업 지원사업 선정</p>
+                                </div>
+                            </div>
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
                                 <div class="icon-box-title">
