체리픽웍스에 (주)추가, 파트너 목록 순서 정리

--- a/index.html
+++ b/index.html
@@ -246,13 +246,13 @@
                                     <p><a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
 
                                     <p><a href="http://koworc.kr" target=new>강원도립대학교</a></p>
-
-                                    <p><a href="https://drdr.io/이호승" target=new>청년농부 이호승 (홍천)</a></p>
                                   </div>
                                   <div class="col-md-6">
+                                    <p><a href="https://drdr.io/이호승" target=new>청년농부 이호승 (홍천)</a></p>
+
                                     <p><a href="https://drdr.io/김현승" target=new>청년농부 김현승 (파주)</a></p>
 
-                                    <p><a href="http://cpworks.co.kr" target=new>체리픽웍스</a></p>
+                                    <p><a href="http://cpworks.co.kr" target=new>(주)체리픽웍스</a></p>
 
                                     <p><a href="https://blog.naver.com/bluemtk">법무사 김청산 사무소</a></p>
 
