--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>제주 스타트업베이 중장년기술창업 지원사업 선정</p>
+				    <p>제주 창조경제혁신센터 보육기업 협약</p>
                                 </div>
                             </div>
                             <div class="icon-box icon-box-left">
