스몰데이즈 추가, 강원도립대 주소 수정

--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
                                 <div class="icon-box-content row">
 
                                   <div class="col-md-6 m-auto">
+                                    <p><a href="https://www.facebook.com/smalldays4u" target=new>스몰데이즈</a></p>
+
                                     <p><a href="https://www.facebook.com/StartupbayJeju" target=new>제주 스타트업베이</a></p>
 
                                     <p><a href="https://ccei.creativekorea.or.kr/jeju" target=new>제주 창조경제혁신센터</a></p>
@@ -245,9 +247,10 @@
 
                                     <p><a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
 
-                                    <p><a href="http://koworc.kr" target=new>강원도립대학교</a></p>
                                   </div>
                                   <div class="col-md-6">
+                                    <p><a href="https://www.gw.ac.kr/gsu" target=new>강원도립대학교</a></p>
+
                                     <p><a href="https://drdr.io/이호승" target=new>청년농부 이호승 (홍천)</a></p>
 
                                     <p><a href="https://drdr.io/김현승" target=new>청년농부 김현승 (파주)</a></p>
@@ -288,7 +291,9 @@
                                     <h6>2019-09</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>제주 스타트업베이 중장년기술창업 지원사업 선정,<br>
+                                    <p>
+				    문화기획사 스몰데이즈와 제휴협약,<br>
+				    제주 스타트업베이 중장년기술창업 지원사업 선정,<br>
 				    제주 창조경제혁신센터 보육기업 협약</p>
                                 </div>
                             </div>
