지역기업개방형혁신 바우처 사업 선정 내용 추가

--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
                                 <div class="icon-box-content row">
 
                                   <div class="col-md-6 m-auto">
+                                    <p><a href="https://www.kiat.or.kr/" target=new>한국산업기술진흥원</a></p>
+
                                     <p><a href="https://www.facebook.com/smalldays4u" target=new>스몰데이즈</a></p>
 
                                     <p><a href="https://www.facebook.com/StartupbayJeju" target=new>제주 스타트업베이</a></p>
@@ -246,9 +248,9 @@
                                     <p><a href="https://www.mss.go.kr" target=new>중소벤처기업부</a></p>
 
                                     <p><a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
-
                                   </div>
                                   <div class="col-md-6">
+
                                     <p><a href="https://www.gw.ac.kr/gsu" target=new>강원도립대학교</a></p>
 
                                     <p><a href="https://drdr.io/이호승" target=new>청년농부 이호승 (홍천)</a></p>
@@ -292,6 +294,7 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
+				    한국산업기술진흥원 지역기업개방형혁신 바우처사업 주관업체 선정,
 				    문화기획사 스몰데이즈와 제휴협약,<br>
 				    제주 스타트업베이 중장년기술창업 지원사업 선정,<br>
 				    제주 창조경제혁신센터 보육기업 협약</p>
