바우처 사업 선정 월 변경

--- a/index.html
+++ b/index.html
@@ -290,11 +290,21 @@
                             <div class="icon-box icon-box-left">
                                 <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
                                 <div class="icon-box-title">
+                                    <h6>2019-10</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>
+				    한국산업기술진흥원 지역기업개방형혁신 바우처사업 주관업체 선정
+				    </p>
+                                </div>
+                            </div>
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
+                                <div class="icon-box-title">
                                     <h6>2019-09</h6>
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-				    한국산업기술진흥원 지역기업개방형혁신 바우처사업 주관업체 선정,
 				    문화기획사 스몰데이즈와 제휴협약,<br>
 				    제주 스타트업베이 중장년기술창업 지원사업 선정,<br>
 				    제주 창조경제혁신센터 보육기업 협약</p>
