특허 사업 선정 내용 추가, 메인 이미지 변경

--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@
 
                                     <p><a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
 
+                                    <p><a href="https://www.kipo.go.kr" target=new>특허청</a></p>
+
                                     <p><a href="https://blog.naver.com/essong1225" target=new>티아이피 특허법률 사무소</a></p>
 
                                     <p><a href="http://appsosystem.com" target=new>(주)앱소</a></p>
@@ -246,10 +248,10 @@
                                     <p><a href="http://koworc.kr" target=new>한국창의여성연구협동조합</a></p>
 
                                     <p><a href="https://www.mss.go.kr" target=new>중소벤처기업부</a></p>
-
-                                    <p><a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
                                   </div>
                                   <div class="col-md-6">
+
+                                    <p><a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
 
                                     <p><a href="https://www.gw.ac.kr/gsu" target=new>강원도립대학교</a></p>
 
@@ -294,8 +296,8 @@
                                 </div>
                                 <div class="icon-box-content">
                                     <p>
-				    한국산업기술진흥원 지역기업개방형혁신 바우처사업 주관업체 선정
-				    </p>
+                        				    한국산업기술진흥원 지역기업개방형혁신 바우처사업 주관업체 선정
+                        				    </p>
                                 </div>
                             </div>
                             <div class="icon-box icon-box-left">
@@ -304,10 +306,18 @@
                                     <h6>2019-09</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>
-				    문화기획사 스몰데이즈와 제휴협약,<br>
-				    제주 스타트업베이 중장년기술창업 지원사업 선정,<br>
-				    제주 창조경제혁신센터 보육기업 협약</p>
+                                    <p>문화기획사 스몰데이즈와 제휴협약,<br>
+                        				    제주 스타트업베이 중장년기술창업 지원사업 선정,<br>
+                        				    제주 창조경제혁신센터 보육기업 협약</p>
+                                </div>
+                            </div>
+                            <div class="icon-box icon-box-left">
+                                <div class="icon-box-icon"><span class="ti-alarm-clock"></span></div>
+                                <div class="icon-box-title">
+                                    <h6>2019-08</h6>
+                                </div>
+                                <div class="icon-box-content">
+                                    <p>특허청 지식재산권창출 지원사업 선정</p>
                                 </div>
                             </div>
                             <div class="icon-box icon-box-left">
@@ -325,7 +335,9 @@
                                     <h6>2019-06</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>제주 이슬농원 송광호님과 제휴협약, 가톨릭관동대학교와 제휴협약</p>
+                                    <p>특허청 지식재산권창출 지원사업 선정,<br>
+                                    제주 이슬농원 송광호님과 제휴협약,<br>
+                                    가톨릭관동대학교와 제휴협약</p>
                                 </div>
                             </div>
                             <div class="icon-box icon-box-left">
@@ -343,7 +355,8 @@
                                     <h6>2019-02</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>체리픽웍스(주)와 제휴협약, 청년농부 김현승님과 제휴협약</p>
+                                    <p>체리픽웍스(주)와 제휴협약,<br>
+                                      청년농부 김현승님과 제휴협약</p>
                                 </div>
                             </div>
                             <div class="icon-box icon-box-left">
@@ -361,7 +374,8 @@
                                     <h6>2018-12</h6>
                                 </div>
                                 <div class="icon-box-content">
-                                    <p>기술보증기금 자금유치, 청년농부 이호승님과 제휴협약</p>
+                                    <p>기술보증기금 자금유치,<br>
+                                      청년농부 이호승님과 제휴협약</p>
                                 </div>
                             </div>
                             <div class="icon-box icon-box-left">
