--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" itemscope itemtype="http://schema.org/WebPage">
     <head>
+        <meta charset="UTF-8">
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130136264-2"></script>
         <script>
@@ -11,17 +12,36 @@
           gtag('config', 'UA-130136264-2');
         </script>
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
-        <meta name="author" content="">
-
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta property="og:site_name" content="어플라이 | APLY - Advanced platform to fly">
+        <meta property="og:type" content="website">
+        <meta name="twitter:card" content="summary_large_image">
         <meta property="og:title" content="어플라이 | APLY - Advanced platform to fly"/>
         <meta property="og:image" content="https://www.aply.biz/assets/images/site_title.png"/>
         <meta property="og:url" content="https://www.aply.biz"/>
         <meta property="og:site_name" content="APLY"/>
-        <meta property="og:description" content="재미있게 일하는 진보된 플랫폼"/>
-        <title>Advanced Platform to fLY | APLY Inc. | 주식회사 어플라이</title>
+        <meta property="og:description" content="재미있게 일하기 위한 진보된 플랫폼"/>
+        <title>주식회사 어플라이 | APLY - Advanced platform to fly</title>
+        <meta name="keywords" content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
+        <meta name="description" content="재미있게 일하기 위한 진보된 플랫폼">
+        <meta itemprop="description" content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
+        <meta itemprop="keywords" content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw">
+
+        <meta property="og:description"  content="재미있게 일하기 위한 진보된 플랫폼">
+        <meta name="twitter:description" content="재미있게 일하기 위한 진보된 플랫폼">
+        <meta itemprop="name"      content="어플라이 | APLY - Advanced platform to fly">
+        <meta property="og:title"  content="어플라이 | APLY - Advanced platform to fly">
+        <meta name="twitter:title" content="어플라이 | APLY - Advanced platform to fly">
+
+        <meta itemprop="image"     content="https://www.aply.biz/assets/images/site_title.png">
+        <meta property="og:image"  content="https://www.aply.biz/assets/images/site_title.png">
+        <meta name="twitter:image" content="https://www.aply.biz/assets/images/site_title.png">
+
+        <link rel="alternate"      href="https://www.aply.biz/" hreflang="x-default">
+        <link rel="canonical"      href="https://www.aply.biz/">
+        <meta itemprop="url"    content="https://www.aply.biz/">
         <!-- Favicons-->
         <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 
